Minor edits to standardise code between pages working on bug fix for bug of gap on RHS of cc-home only between 1076px-992px and below 425px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,7 @@ body {
 /* Containers' code is based on code from the Whiskey Drop lesson*/
 
 .callout-container {
+    margin-top: 56px;
     height: 90vh;
     /* allows info below the fold to show on most screens to encourage users to scroll down. */
     display: -webkit-box;
